--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
 </head>
 <body>
 
-<h1>Hello</h1>
-<p>Hello world.</p>
-
+<h1>Open Legal Questions</h1>
+  <p>  
+    This will be the website for the <i>Open Legal Questions</i> project.
+    The aim of the website is to collate and explain open legal questions. 
+    The goal is to help practising lawyers to notice when an open issue arises and how it might best be argued.
+    The further goal is to resolve these problems in the courts.
+  </p>
+  <p>  
+    I aim to launch in 2025, focusing on English criminal law.
+  </p>
+  <p>  
+    This project is run by <a href="jamesmanwaring.com">James Manwaring</a> (University of Cambridge).
+  </p>
 </body>
 </html>
