--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     I aim to launch in 2025, focusing on English criminal law.
   </p>
   <p>  
-    This project is run by <a href="jamesmanwaring.com">James Manwaring</a> (University of Cambridge).
+    This project is run by <a href="www.jamesmanwaring.com">James Manwaring</a> (University of Cambridge).
   </p>
 </body>
 </html>
